# CattleGame

./: .gitattributes  .gitignore  .ignore  .p4ignore  CLAUDE.md  CattleGame.code-workspace  CattleGame.uproject  PERFORMANCE_REVIEW_CUSTOMGIT.md
Config/: DefaultEngine.ini  DefaultGame.ini
Content/Audio/: mariachi_trumpet.uasset
Content/Core/: GM_Main.uasset
Content/Levels/: 01_Basic.umap  01_mini_test.umap  BP_01_AnimalSpawner.uasset  DA_01_Bison.uasset  DA_01_Dog.uasset  DA_01_Horse.uasset
Content/VFX/: NE_MuzzleFlash.uasset  N_MuzzleFlash.uasset
Plugins/BlueprintSerializer/: BlueprintSerializer.uplugin  README.md  schema.json
Plugins/BlueprintSerializer/Scripts/: README.md  pyproject.toml
Plugins/BlueprintSerializer/Scripts/blueprint_serializer/: __init__.py  __main__.py  diff_blueprints.py  export_blueprint.py  graph_cli.py  graph_editor.py  import_blueprint.py  merge_workflow.py  unreal_remote.py
Plugins/CustomGit/: CustomGit.uplugin
Scripts/: blueprint_schema.py
Source/: CattleGame.Target.cs  CattleGameEditor.Target.cs
Source/CattleGame/: AIC_Animal.json  BP_Bison.json  BP_Lasso.json  BP_LassoProjectile.json  CattleGame.Build.cs  CattleGame.cpp  CattleGame.h
SourceContent/: attribution.json
SourceContent/Cowboy01/: Cowboy_Rig.blend
SourceContent/MuzzleFlash/: MuzzleCone.afphoto  MuzzleCone.fbx  MuzzlePlane.afphoto  MuzzlePlane.blend  MuzzlePlane.blend1  MuzzlePlane.fbx
SourceContent/Trumpet/: G_Key.afphoto  (+2 more)
docs/: cattle_behavior_tree_setup.md  cattle_volume_user_guide.md  lasso_blueprint_instructions.md  lasso_plan.md  lasso_plan.md.bk
(+523 files in other folders)
