[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "blueprint-serializer"
version = "1.0.0"
description = "Python automation tools for UE5 Blueprint Serializer plugin"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "CattleGame" }]
keywords = ["unreal", "blueprint", "serializer", "ai", "copilot"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Games/Entertainment",
]

[project.scripts]
blueprint-serializer = "blueprint_serializer.__main__:main"
bp-export = "blueprint_serializer.export_blueprint:main"
bp-import = "blueprint_serializer.import_blueprint:main"
bp-diff = "blueprint_serializer.diff_blueprints:main"
bp-merge = "blueprint_serializer.merge_workflow:main"
bp-graph = "blueprint_serializer.graph_cli:main"

[project.urls]
Homepage = "https://github.com/CattleGame/BlueprintSerializer"

[tool.setuptools.packages.find]
where = ["."]
include = ["blueprint_serializer*"]
